effects/blur: Fix blur stripes when rounded window scaling

BUG: 460412